--- a/sharedReview/build.gradle
+++ b/sharedReview/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
 	runtimeOnly 'com.h2database:h2'
 //	runtimeOnly 'com.mysql:mysql-connector-j'
-//	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 
 	// security
 	testImplementation 'org.springframework.security:spring-security-test'
