로그인 header 수정 중간 저장

--- a/sharedReview/src/main/resources/application.yml
+++ b/sharedReview/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
-#  config:
-#    import: classpath:application-secret.yml
+  config:
+    import: classpath:application-secret.yml
 
   datasource:
     url: jdbc:h2:tcp://localhost/~/sr
