게시물 상세보기 페이지 코드 작성 중

--- a/sharedReview/build.gradle
+++ b/sharedReview/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.projectlombok:lombok'
+	implementation'org.commonmark:commonmark:0.21.0' // 마크다운 변환
 
 	runtimeOnly 'com.h2database:h2'
 //	runtimeOnly 'com.mysql:mysql-connector-j'
