--- a/sharedReview/src/main/resources/application.yml
+++ b/sharedReview/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto:
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
