의존성 devtools 추가, 관리자 페이지 카테고리 삭제 기능 수정중

--- a/sharedReview/build.gradle
+++ b/sharedReview/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 
 	// mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	implementation 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
