관리자 페이지 카테고리 삭제 기능 작성

--- a/sharedReview/build.gradle
+++ b/sharedReview/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 	// mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
-	implementation 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-d'
 }
 
 tasks.named('test') {
