--- a/sharedReview/build.gradle
+++ b/sharedReview/build.gradle
@@ -47,9 +47,25 @@ dependencies {
 	// mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
-	implementation 'org.springframework.boot:spring-boot-d'
+
+//	 Querydsl 추가
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
+//QueryDSL 설정
+def generated = 'src/main/generated' // 개발 단계에서는 gitignore에 generated 포함시키기, 배포하는 경우 주석처리
+tasks.withType(JavaCompile) {
+	options.generatedSourceOutputDirectory = file(generated)
+}
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+
+
+clean {
+	delete file('src/main/generated')
 }
