* 댓글 페이지네이션 코드 수정
* 댓글을 작성할 경우 값 비우기

* 좋아요 오류 수정

--- a/sharedReview/src/main/resources/application.yml
+++ b/sharedReview/src/main/resources/application.yml
@@ -41,6 +41,10 @@ logging:
   level:
     org.hibernate.SQL: debug
     org.hibernate.type: trace
+    org.hibernate:
+      type:
+        descriptor:
+          sql: trace
 server:
   port: 8080
   servlet:
