--- a/sharedReview/.github/workflows/deploy.yml
+++ b/sharedReview/.github/workflows/deploy.yml
@@ -5,8 +5,26 @@ on:
       - main
 
 jobs:
-  My-Deploy_Job:
+  Deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Hello World 찍기
+      - name: Github Repository에 올린 파일들 불러오기
+        uses: actions/checkout@v4
+
+      - name: JDK 17 버전 설치
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: application.yml 파일 만들기
+        run: echo "test" > ./sharedReview/src/main/resources/application-dev.yml
+
+      - name: 권한 부여
+        run: chmod +x ./sharedReview/gradlew
+
+      - name: 빌드하기
+        run: |
+          cd sharedReview
+          ./gradlew clean build
+        
