--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
+    "marked": "^14.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-cookie": "^7.1.0",
