--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
-name: Github Actions 실행시켜보기
+name: Deploy To EC2
+
 on:
   push:
     branches:
@@ -18,7 +19,7 @@ jobs:
           java-version: 17
 
       - name: application.yml 파일 만들기
-        run: echo "test" > ./sharedReview/src/main/resources/application-dev.yml
+        run: echo "${{secrets.APPLICATION_DEV}}" > ./sharedReview/src/main/resources/application-dev.yml
 
       - name: 권한 부여
         run: chmod +x ./sharedReview/gradlew
@@ -26,5 +27,4 @@ jobs:
       - name: 빌드하기
         run: |
           cd sharedReview
-          ./gradlew clean build
-        
+          ./gradlew clean build        
