--- a/sharedReview/build.gradle
+++ b/sharedReview/build.gradle
@@ -30,7 +30,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	implementation'org.commonmark:commonmark:0.21.0' // 마크다운 변환
 
-	runtimeOnly 'com.h2database:h2'
+//	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // MariaDB
 //	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 
