--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,9 @@ jobs:
       - name: application.yml 파일 만들기
         run: echo "${{secrets.APPLICATION_DEV}}" > ./sharedReview/src/main/resources/application-dev.yml
 
+      - name: application-dev.yml  파일 내용 확인
+        run: cat ./sharedReview/src/main/resources/application-dev.yml
+
       - name: 권한 부여
         run: chmod +x ./sharedReview/gradlew
 
