--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: 17
 
       - name: application.yml 파일 만들기
-        run: echo "${{secrets.APPLICATION_DEV}}"  | base64 --decode > ./sharedReview/src/main/resources/application-dev.yml
+        run: printf "%s" "${{secrets.APPLICATION_DEV}}" | base64 --decode > ./sharedReview/src/main/resources/application-dev.yml
 
       - name: 권한 부여
         run: chmod +x ./sharedReview/gradlew
