--- a/sharedReview/src/main/resources/application-dev.yml
+++ b/sharedReview/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
 
   datasource:
     url: jdbc:mariadb://172.30.1.93:3307/shared_review
-    username: shared_review
+    username: sr
     password: 1234
     driver-class-name: org.mariadb.jdbc.Driver
 
