deploy 오류 해결 중

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,5 +33,5 @@ jobs:
 
       - name: 빌드하기
         run: |
-          cd sharedReview
+          cd sharedReview/
           ./gradlew clean build        
