--- a/sharedReview/build.gradle
+++ b/sharedReview/build.gradle
@@ -61,13 +61,13 @@ def generated = 'src/main/generated' // 개발 단계에서는 gitignore에 gene
 tasks.withType(JavaCompile) {
 	options.generatedSourceOutputDirectory = file(generated)
 }
-//tasks.named('test') {
-//	useJUnitPlatform()
-//}
-
-test {
+tasks.named('test') {
 	useJUnitPlatform()
 }
+
+//test {
+//	useJUnitPlatform()
+//}
 
 clean {
 	delete file('src/main/generated')
