오류 원인 찾는 중

--- a/sharedReview/build.gradle
+++ b/sharedReview/build.gradle
@@ -65,9 +65,9 @@ tasks.withType(JavaCompile) {
 //	useJUnitPlatform()
 //}
 
-//test {
-//	useJUnitPlatform()
-//}
+test {
+	useJUnitPlatform()
+}
 
 clean {
 	delete file('src/main/generated')
