--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
-#      - name: application.yml 파일 만들기
-#        run: printf "%s" "${{secrets.APPLICATION_DEV}}" | base64 --decode > ./sharedReview/src/main/resources/application-dev.yml
+      - name: application.yml 파일 만들기
+        run: echo "${{secrets.APPLICATION_DEV}}" | base64 --decode > ./sharedReview/src/main/resources/application-dev.yml
 
 #      - name: Setup MariaDB
 #        uses: getong/mariadb-action@v1.11
