--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           distribution: temurin
           java-version: 17
       - name: application.yml 파일 만들기
-        run: echo "${{secrets.APPLICATION_DEV}}" | base64 --decode > ./sharedReview/src/main/resources/application-dev.yml
+        run: echo "${{secrets.APPLICATION_DEV}}" > ./sharedReview/src/main/resources/application-dev.yml
 
 #      - name: Setup MariaDB
 #        uses: getong/mariadb-action@v1.11
