--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,15 +20,6 @@ jobs:
       - name: application.yml 파일 만들기
         run: echo "${{secrets.APPLICATION_DEV}}" > ./sharedReview/src/main/resources/application-dev.yml
 
-#      - name: Setup MariaDB
-#        uses: getong/mariadb-action@v1.11
-#        with:
-#          host port: 3307
-#          character set server: 'utf8'
-#          mysql database: 'shared_review'
-#          mysql user: 'sr'
-#          mysql password: '1234'
-
       - name: 권한 부여
         run: chmod +x ./sharedReview/gradlew
 
@@ -36,3 +27,26 @@ jobs:
         run: |
           cd sharedReview/
           ./gradlew clean build        
+
+      - name: 빌드된 파일 이름 변경
+        run: mv ./build/libs/*SNAPSHOT.jar ./sr.jar
+
+      - name: 압축하기
+        run: tar -czvf $GITHUB_SHA.tar.gz project.jar appspec.yml scripts
+
+      - name: AWS Resource에 접근할 수 있게 AWS credentials 설정
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: ap-northeast-2
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: S3에 프로젝트 폴더 업로드하기
+        run: aws s3 cp --region ap-northeast-2 $GITHUB_SHA.tar.gz s3://shared-review/$GITHUB_SHA.tar.gz
+
+      - name: CodeDeploy를 활용해 EC2에 프로젝트 코드 배포
+        run: aws deploy create-deployment
+            --application-name shared-review
+            -- deployment-config-name CodeDeployDefault.AllAtOnce
+            --deployment-group-name shared-reivew-server
+            --s3-location bucket=shared-review-bucket,bundleType=tar,key=$GITHUB_SHA.tar.gz
