--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: 폴더 확인하기
         run: ls
       - name: 빌드된 파일 이름 변경
-        run: mv ./build/libs/*SNAPSHOT.jar ./sr.jar
+        run: mv ./sharedReview/build/libs/*SNAPSHOT.jar ./sr.jar
 
       - name: 압축하기
         run: tar -czvf $GITHUB_SHA.tar.gz project.jar appspec.yml scripts
