CodeDeploy 배포, 오류 수정, s3 이름 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: S3에 프로젝트 폴더 업로드하기
-        run: aws s3 cp --region ap-northeast-2 $GITHUB_SHA.tar.gz s3://shared-review/$GITHUB_SHA.tar.gz
+        run: aws s3 cp --region ap-northeast-2 $GITHUB_SHA.tar.gz s3://shared-reivew-bucket/$GITHUB_SHA.tar.gz
 
       - name: CodeDeploy를 활용해 EC2에 프로젝트 코드 배포
         run: aws deploy create-deployment
