CodeDeploy 오류 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,8 @@ jobs:
         run: aws s3 cp --region ap-northeast-2 $GITHUB_SHA.tar.gz s3://shared-reivew-bucket/$GITHUB_SHA.tar.gz
 
       - name: CodeDeploy를 활용해 EC2에 프로젝트 코드 배포
-        run: aws deploy create-deployment
-          --application-name shared-review
-          -- deployment-config-name CodeDeployDefault.AllAtOnce
-          --deployment-group-name shared-reivew-server
-          --s3-location bucket=shared-reivew-bucket,bundleType=tar,key=$GITHUB_SHA.tar.gz
+        run: aws deploy create-deployment \
+          --application-name shared-review \
+          --deployment-config-name CodeDeployDefault.AllAtOnce \
+          --deployment-group-name shared-review-server \
+          --s3-location bucket=shared-review-bucket,bundleType=tar,key=$GITHUB_SHA.tar.gz
