내정보 페이지 비밀번호 확인 기능 수정중

--- a/sharedReview/src/main/resources/application-dev.yml
+++ b/sharedReview/src/main/resources/application-dev.yml
@@ -4,7 +4,8 @@ spring:
 
 
   datasource:
-    url: jdbc:mariadb://172.30.1.93:3307/shared_review
+#    url: jdbc:mariadb://172.30.1.93:3307/shared_review
+    url: jdbc:mariadb://127.0.0.1:3307/shared_review
     username: sr
     password: 1234
     driver-class-name: org.mariadb.jdbc.Driver
