--- a/sharedReview/src/main/resources/application-dev.yml
+++ b/sharedReview/src/main/resources/application-dev.yml
@@ -4,10 +4,10 @@ spring:
 
 
   datasource:
-    url: jdbc:mariadb://172.30.1.32:3307/shared_review
+    url: jdbc:mariadb://121.166.3.16/shared_review
 #    url: jdbc:mariadb://127.0.0.1:3307/shared_review
-    username: sr
-    password: 1234
+    username: sr #sr
+    password: 1234 #1234
     driver-class-name: org.mariadb.jdbc.Driver
 
   jpa:
