--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,54 +1,54 @@
-name: Deploy To EC2
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  Deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Github Repository에 올린 파일들 불러오기
-        uses: actions/checkout@v4
-
-      - name: JDK 17 버전 설치
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17
-      - name: application.yml 파일 만들기
-        run: echo "${{secrets.APPLICATION_DEV}}" > ./sharedReview/src/main/resources/application-dev.yml
-
-      - name: 권한 부여
-        run: chmod +x ./sharedReview/gradlew
-
-      - name: 빌드하기
-        run: |
-          cd sharedReview/
-          ./gradlew clean build        
-
-      - name: 폴더 확인하기
-        run: ls
-      - name: 빌드된 파일 이름 변경
-        run: mv ./sharedReview/build/libs/*SNAPSHOT.jar ./sr.jar
-
-      - name: 압축하기
-        run: tar -czvf $GITHUB_SHA.tar.gz sr.jar appspec.yml scripts
-
-      - name: AWS Resource에 접근할 수 있게 AWS credentials 설정
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-region: ap-northeast-2
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-      - name: S3에 프로젝트 폴더 업로드하기
-        run: aws s3 cp --region ap-northeast-2 $GITHUB_SHA.tar.gz s3://shared-reivew-bucket/$GITHUB_SHA.tar.gz
-
-      - name: CodeDeploy를 활용해 EC2에 프로젝트 코드 배포
-        run: aws deploy create-deployment
-          --application-name shared-review
-          --deployment-config-name CodeDeployDefault.AllAtOnce
-          --deployment-group-name shared-reivew-server
-          --s3-location bucket=shared-reivew-bucket,bundleType=tgz,key=$GITHUB_SHA.tar.gz
+#name: Deploy To EC2
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#
+#jobs:
+#  Deploy:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Github Repository에 올린 파일들 불러오기
+#        uses: actions/checkout@v4
+#
+#      - name: JDK 17 버전 설치
+#        uses: actions/setup-java@v4
+#        with:
+#          distribution: temurin
+#          java-version: 17
+#      - name: application.yml 파일 만들기
+#        run: echo "${{secrets.APPLICATION_DEV}}" > ./sharedReview/src/main/resources/application-dev.yml
+#
+#      - name: 권한 부여
+#        run: chmod +x ./sharedReview/gradlew
+#
+#      - name: 빌드하기
+#        run: |
+#          cd sharedReview/
+#          ./gradlew clean build
+#
+#      - name: 폴더 확인하기
+#        run: ls
+#      - name: 빌드된 파일 이름 변경
+#        run: mv ./sharedReview/build/libs/*SNAPSHOT.jar ./sr.jar
+#
+#      - name: 압축하기
+#        run: tar -czvf $GITHUB_SHA.tar.gz sr.jar appspec.yml scripts
+#
+#      - name: AWS Resource에 접근할 수 있게 AWS credentials 설정
+#        uses: aws-actions/configure-aws-credentials@v4
+#        with:
+#          aws-region: ap-northeast-2
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#
+#      - name: S3에 프로젝트 폴더 업로드하기
+#        run: aws s3 cp --region ap-northeast-2 $GITHUB_SHA.tar.gz s3://shared-reivew-bucket/$GITHUB_SHA.tar.gz
+#
+#      - name: CodeDeploy를 활용해 EC2에 프로젝트 코드 배포
+#        run: aws deploy create-deployment
+#          --application-name shared-review
+#          --deployment-config-name CodeDeployDefault.AllAtOnce
+#          --deployment-group-name shared-reivew-server
+#          --s3-location bucket=shared-reivew-bucket,bundleType=tgz,key=$GITHUB_SHA.tar.gz
